src/objects/c2g__codaCompany__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcompany</customHelpPage>
    <description>Stores the FinancialForce company details.</description>
    <fields>
        <fullName>c2g__AddressIsValid__c</fullName>
        <formula>NOT
( ISBLANK(c2g__ShortStreet__c) &amp;&amp;
  ISBLANK(c2g__City__c) &amp;&amp; 
  ISBLANK(c2g__StateProvince__c) &amp;&amp;
  ISBLANK(c2g__ZipPostCode__c) &amp;&amp;
  ISBLANK(c2g__Country__c) 
) &amp;&amp; 
( c2g__ShortStreet__c  =  c2g__ValidatedStreet__c ) &amp;&amp;
( c2g__City__c =  c2g__ValidatedCity__c ) &amp;&amp;
( c2g__StateProvince__c =  c2g__ValidatedStateProvince__c ) &amp;&amp;  
( c2g__ZipPostCode__c =  c2g__ValidatedZipPostalCode__c ) &amp;&amp;
( c2g__Country__c =  c2g__ValidatedCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Companies (Bank Account)</relationshipLabel>
        <relationshipName>CompaniesBankAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate1__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 1</label>
        <picklist>
            <picklistValues>
                <fullName>End of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start of Next Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate2__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 2</label>
        <picklist>
            <picklistValues>
                <fullName>End of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start of Next Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate3__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 3</label>
        <picklist>
            <picklistValues>
                <fullName>End of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start of Next Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset1__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset2__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset3__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription1__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 1</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription2__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 2</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription3__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 3</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount1__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount2__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount3__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CashMatchingCurrencyMode__c</fullName>
        <label>Cash Matching Currency Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__City__c</fullName>
        <description>The city</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ContactEmail__c</fullName>
        <description>The contact email</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__Country__c</fullName>
        <description>The country</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerCurrencyWriteOffDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Currency Write-off Dimension 1</description>
        <label>Currency Write-off Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Companies (Currency Write-off Dimension 1)</relationshipLabel>
        <relationshipName>CompaniesCWOD1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerCurrencyWriteOffDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Currency Write-off Dimension 2</description>
        <label>Currency Write-off Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Companies (Currency Write-off Dimension 2)</relationshipLabel>
        <relationshipName>CompaniesCWOD2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerCurrencyWriteOffDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Currency Write-off Dimension 3</description>
        <label>Currency Write-off Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Companies (Currency Write-off Dimension 3)</relationshipLabel>
        <relationshipName>CompaniesCWOD3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerCurrencyWriteOff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-off</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Currency Write-off)</relationshipLabel>
        <relationshipName>CompaniesCurrWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerSettlementDiscountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Settlement Discount Dimension 1</description>
        <label>Settlement Discount Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Companies (Settlement Discount Dimension 1)</relationshipLabel>
        <relationshipName>CompaniesSettDiscDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerSettlementDiscountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Settlement Discount Dimension 2</description>
        <label>Settlement Discount Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Companies (Settlement Discount Dimension 2)</relationshipLabel>
        <relationshipName>CompaniesSettDiscDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerSettlementDiscountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Settlement Discount Dimension 3</description>
        <label>Settlement Discount Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Companies (Settlement Discount Dimension 3)</relationshipLabel>
        <relationshipName>CompaniesSettDiscDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerSettlementDiscount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Settlement Discount)</relationshipLabel>
        <relationshipName>CompaniesSettDisc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerWriteOffDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Write-Off Dimension1</description>
        <label>Write-off Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Companies (Write-off Dimension 1)</relationshipLabel>
        <relationshipName>CompaniesWriteOffDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerWriteOffDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Write-off Dimension 2</description>
        <label>Write-off Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Companies (Write-off Dimension 2)</relationshipLabel>
        <relationshipName>CompaniesWriteOffDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerWriteOffDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Write-off Dimension 3</description>
        <label>Write-off Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Companies (Write-off Dimension 3)</relationshipLabel>
        <relationshipName>CompaniesWriteOffDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerWriteOff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Write-off</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Write-off)</relationshipLabel>
        <relationshipName>CompaniesWriteOff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DisableRecurringInvoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Opportunity Recurring Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ECCountryCode__c</fullName>
        <label>Tax Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__Fax__c</fullName>
        <description>The fax</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LogoImage__c</fullName>
        <formula>IF(LEN(c2g__LogoURL__c)=0,&quot;&quot;, IMAGE(c2g__LogoURL__c,&quot;Company Logo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LogoURL__c</fullName>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Phone__c</fullName>
        <description>The phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__RetainedEarningsGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retained Earnings GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Retained Earnings GLA)</relationshipLabel>
        <relationshipName>DefaultRetainedEarningsGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesTaxCompanyCode__c</fullName>
        <description>The code identifies the company in external tax calculation and reporting systems</description>
        <inlineHelpText>The code identifies the company in external tax calculation and reporting systems</inlineHelpText>
        <label>Sales Tax Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ShortStreet__c</fullName>
        <label>Short Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__StateProvince__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Street__c</fullName>
        <description>The street</description>
        <label>Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SuspenseGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suspense GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Suspense GLA)</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Companies (Tax Code)</relationshipLabel>
        <relationshipName>CompaniesTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxIdentificationNumber__c</fullName>
        <label>Tax Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VATRegistrationNumber__c</fullName>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__VAT_GST_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT/GST Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ValidatedCity__c</fullName>
        <label>ValidatedCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ValidatedCountry__c</fullName>
        <label>Validated Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ValidatedStateProvince__c</fullName>
        <label>Validated State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ValidatedStreet__c</fullName>
        <label>ValidatedStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ValidatedZipPostalCode__c</fullName>
        <label>Validated Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Website__c</fullName>
        <description>The website</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndMode__c</fullName>
        <label>Year End Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Full Accounting Code</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GLA Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ZipPostCode__c</fullName>
        <description>The zip or postal code</description>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaCompany</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaCompany</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaCompany</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>c2g__IntercompanyAccount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <recordTypes>
        <fullName>c2g__COMB</fullName>
        <active>true</active>
        <description>Multi-tier Tax Companies. This option provides access to a corresponding Combined tax page layout.</description>
        <label>Combined</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__GST</fullName>
        <active>true</active>
        <description>Goods and Service Tax Companies. This option provides access to a corresponding GST page layout.</description>
        <label>GST</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__SUT</fullName>
        <active>true</active>
        <description>Sales and Use Tax Companies. This option provides access to a corresponding SUT page layout.</description>
        <label>SUT</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__VAT</fullName>
        <active>true</active>
        <description>Value Added Tax Companies. This option provides access to a corresponding VAT page layout.</description>
        <label>VAT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>